--- a/src/ListenTogether.Pages/Components/SearchLabel.razor
+++ b/src/ListenTogether.Pages/Components/SearchLabel.razor
@@ -5,7 +5,7 @@
          Class="cursor-text"
          IconColor="Color.Primary"
          OnClick="GotoSearchPage"
-         Style="width: 100%; display: flex; justify-content: left; padding-left: 15px;">
+         Style="display: flex; justify-content: left; padding-left: 15px;">
     <div class="hot-word @(_isLeave?"leave":"")">
         @_text
     </div>
