--- a/src/ListenTogether.Pages/Shared/MainLayout.razor
+++ b/src/ListenTogether.Pages/Shared/MainLayout.razor
@@ -87,7 +87,8 @@
                 TableStriped = "#292929",
                 TableHover = "#182437",
                 DarkLighten = "#494C50",
-                Black = "#858585"
+                Black = "#858585",
+                TextPrimary = "#D5D5D5"
             }
         };
 
