--- a/src/ListenTogether.Pages/Components/Player/DesktopPlayingView.razor
+++ b/src/ListenTogether.Pages/Components/Player/DesktopPlayingView.razor
@@ -4,10 +4,12 @@
     <div class="d-flex align-center play-control">
         <MudIconButton Size="Size.Medium"
                        Icon="fa-solid fa-backward-step"
+                       Style="color:var(--mud-palette-white);"
                        Disabled="@(Music==null)"
                        OnClick="PreviousAsync" />
         <MudToggleIconButton Size="Size.Large"
                              Disabled="@(Music==null)"
+                             Style="color:var(--mud-palette-white);"
                              Toggled="@IsPlaying"
                              ToggledChanged="PlayAsync"
                              Icon="fa-regular fa-circle-play"
@@ -15,18 +17,16 @@
                              ToggledIcon="fa-solid fa-circle-pause" />
         <MudIconButton Size="Size.Medium"
                        Disabled="@(Music==null)"
+                       Style="color:var(--mud-palette-white);"
                        Icon="fa-solid fa-forward-step"
                        OnClick="NextAsync" />
     </div>
     <div class="d-flex align-center ml-6 mr-6 music-info">
-        <div @onclick="OpenPlayingPageAsync" class="music-image @((!_isFirstPlay)?"image-hover":"")">
+        <div class="music-image">
             <MudImage Src="@(Music==null ?"https://jiuling.cc/images/music.svg":Music.ImageUrl)"
                       Height="45"
                       Width="45"
                       Class="rounded-lg" />
-            <div class="mask">
-                <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.KeyboardArrowUp"></MudIcon>
-            </div>
         </div>
         <div class="music-detail">
             <div class="d-flex justify-space-between">
@@ -52,6 +52,7 @@
     <div class="d-flex align-center other">
         <MudIconButton Size="Size.Small"
                        Disabled="@(Music==null)"
+                       Style="color:var(--mud-palette-white);"
                        Icon="@RepeatIcon"
                        OnClick="ChangeRepeatAsync" />
 
@@ -59,6 +60,7 @@
         {
             <MudIconButton Class="ml-2"
                        Disabled="@(Music==null)"
+                       Style="color:var(--mud-palette-white);"
                        Size="Size.Small"
                        Icon="fas fa-folder-plus"
                        OnClick="@(()=>AddToMyFavoriteAsync(Music))" />
@@ -66,12 +68,14 @@
 
         <MudIconButton Class="ml-2"
                        Disabled="@(Music==null)"
+                       Style="color:var(--mud-palette-white);"
                        Size="Size.Small"
                        Icon="fas fa-clock"
                        OnClick="@(()=>GotoAutoClosePage())" />
 
         <MudIconButton Class="ml-2"
                        Disabled="@(Music==null)"
+                       Style="color:var(--mud-palette-white);"
                        Size="Size.Small"
                        Icon="@SoundIcon"
                        OnClick="ChangeSoundAsync" />
@@ -88,7 +92,6 @@
 
 @code {
 
-    private bool _isFirstPlay = true;
     private bool _isPlayProgressDragging = false;
 
     [Parameter]
@@ -105,10 +108,6 @@
         set
         {
             _position = value;
-            if (_position != null && _isFirstPlay)
-            {
-                _isFirstPlay = false;
-            }
             if (!_isPlayProgressDragging)
             {
                 _playProgress = (_position?.PlayProgress ?? 0) * 100;
@@ -132,8 +131,6 @@
     [Parameter]
     public EventCallback OnNext { get; set; }
     [Parameter]
-    public EventCallback OnOpenPlayingPage { get; set; }
-    [Parameter]
     public EventCallback<double> OnProgressChanged { get; set; }
     [Parameter]
     public EventCallback OnRepeatChanged { get; set; }
@@ -153,21 +150,12 @@
 
     private async Task PlayAsync(bool toggled)
     {
-        _isFirstPlay = false;
         await OnPlay.InvokeAsync();
     }
 
     private async Task NextAsync()
     {
         await OnNext.InvokeAsync();
-    }
-    private async Task OpenPlayingPageAsync()
-    {
-        if (_isFirstPlay)
-        {
-            return;
-        }
-        await OnOpenPlayingPage.InvokeAsync();
     }
 
     private void ProgressMouseDown()
