--- a/src/ListenTogether.Pages/Pages/PlayingPage.razor
+++ b/src/ListenTogether.Pages/Pages/PlayingPage.razor
@@ -2,86 +2,84 @@
 @inject MusicPlayerService _playerService
 @inject IPlaylistService _playlistService
 @inject IMusicNetworkService _musicNetworkService
-
 @inject IJSRuntime JSRuntime
 
-<div class="page d-flex flex-column">
-    <div class="flex-grow-1 d-flex flex-column music-content">
-        <div class="flex-grow-0 d-flex align-center justify-space-between tool-bar">
-            <MudIconButton Icon="@Icons.Material.Filled.KeyboardArrowDown"
-                           Size="Size.Medium"
-                           Style="color:#FFF"
-                           OnClick="@(()=>ClosePlayingPage())"></MudIconButton>
+<div class="blurBgMask"></div>
+<div class="blur" style="background-image:url(@(_currentMusic?.ImageUrl??"https://jiuling.cc/images/music.svg"))"></div>
 
-            <MudHidden Breakpoint="Breakpoint.SmAndDown">
-                <DesktopTitleBar ButtonStyle="color:#FFF" />
-            </MudHidden>
+<div class="page music-page">
+
+    <div class="tool-bar d-flex align-center">
+        <MudIconButton Class="flex-grow-0"
+                       Icon="@Icons.Material.Filled.KeyboardArrowDown"
+                       Size="Size.Small"
+                       Style="color:var(--mud-palette-white);"
+                       OnClick="@(()=>ClosePlayingPage())"></MudIconButton>
+
+        <div class="flex-grow-1 d-flex justify-end">
+            <MudIconButton Icon="@Icons.Material.Filled.Share"
+                           Size="Size.Small"
+                           Style="color:var(--mud-palette-white);"
+                           OnClick="@(ShareAsync)"></MudIconButton>
         </div>
 
-        <div class="flex-grow-1 music-info">
-            <div class="music-image">
-                <div class="music-image-avatar @(_isPlaying ? "" : "animation-paused")">
-                    @if (_currentMusic == null)
-                    {
-                        <MudSkeleton Class="mt-1" Height="200" />
-                    }
-                    else
-                    {
-                        <MudAvatar Style="width: 200px; height: 200px;">
-                            <MudImage Src="@(_currentMusic.ImageUrl)"
-                                  Elevation="25" />
-                        </MudAvatar>
-                    }
-
-                </div>
-                <div class="align-self-center mt-4 copy">
-                    复制
-                </div>
-            </div>
-            <div class="music-detail d-flex flex-column">
-                @if (_currentMusic == null)
-                {
-                    <div class="flex-grow-0">
-                        <MudSkeleton Class="mt-1" />
-                    </div>
-                }
-                else
-                {
-                    <div class="flex-grow-0 title">
-                        @_currentMusic.Name
-                    </div>
-                    <div class="flex-grow-0 name">
-                        @_currentMusic.Artist - @_currentMusic.Album
-                    </div>
-                }
-
-                <div class="flex-grow-1 lyric">
-                    @if (_lyrics == null)
-                    {
-                        <MudSkeleton Class="mt-1" />
-                        <MudSkeleton Class="mt-1" />
-                        <MudSkeleton Class="mt-1" />
-                        <MudSkeleton Class="mt-1" />
-                    }
-                    else
-                    {
-                        <ul style="transform:translateY(@(0-_offset)px)">
-
-                            @foreach (var lyric in _lyrics)
-                            {
-                                <li class="lyric-row @(lyric.IsHighlight?"highlight":"")">@lyric.Info</li>
-                            }
-                        </ul>
-                    }
-                </div>
-            </div>
-        </div>
-
-        <div class="blurBgMask"></div>
-        <div class="blur" style="background-image:url(@(_currentMusic?.ImageUrl??"https://jiuling.cc/images/music.svg"))"></div>
+        <MudHidden Breakpoint="Breakpoint.SmAndDown">
+            <DesktopTitleBar Class="flex-grow-0 ml-5"
+                             ButtonStyle="color:var(--mud-palette-white);" />
+        </MudHidden>
     </div>
 
-    <div class="playing-player-bar">
+    <div class="music-image">
+        <div class="music-image-avatar @(_isPlaying ? "" : "animation-paused")">
+            @if (_currentMusic == null)
+            {
+                <MudSkeleton Class="mt-1" Height="200" />
+            }
+            else
+            {
+                <img class="music-img mud-elevation-25"
+                     src="@(_currentMusic.ImageUrl)" />
+            }
+        </div>
+    </div>
+
+    <div class="music-detail d-flex flex-column align-center">
+        @if (_currentMusic == null)
+        {
+            <MudSkeleton Class="mt-1" />
+        }
+        else
+        {
+            <div class="title">
+                @_currentMusic.Name
+            </div>
+            <div class="name">
+                @_currentMusic.Artist - @_currentMusic.Album
+            </div>
+        }
+
+        <div class="lyric">
+            @if (_lyrics == null)
+            {
+                <MudSkeleton Class="mt-1" />
+                <MudSkeleton Class="mt-1" />
+                <MudSkeleton Class="mt-1" />
+                <MudSkeleton Class="mt-1" />
+            }
+            else
+            {
+                <ul style="transform:translateY(@(0-_offset)px)">
+
+                    @foreach (var lyric in _lyrics)
+                    {
+                        <li class="lyric-row @(lyric.IsHighlight?"highlight":"")">@lyric.Info</li>
+                    }
+                </ul>
+            }
+        </div>
+    </div>
+
+    <div class="player-bar">
         <PlayerBar />
     </div>
 </div>
@@ -233,5 +231,11 @@
     private async Task ClosePlayingPage()
     {
         await OnClosePlayingPage.InvokeAsync();
+    }
+
+
+    private async Task ShareAsync()
+    {
+
     }
 }
